Many fixes from the call:
- no more transparency between fading phone screens

- location/sched overlay covers form drawer (if open)

- forcing page refresh when going from desktop >
  mobile (fake it 'til you make it)

- (appropriate) article links force horizontal scroll
  to sub-section

- android dude now in front of android phone when
  sliding back to the right

- news moved above logos in #overview mobile view

- close button no longer cut off by scroll bar in
  mobile view of overlay

--- a/media/css/firefox/partners.less
+++ b/media/css/firefox/partners.less
@@ -618,7 +618,7 @@
   display: inline;
   position: absolute;
   top: 5px;
-  right: 5px;
+  right: 20px;
   color: #ccc;
   font-family: 'Open Sans', sans-serif;
   font-size: 12px;
@@ -649,7 +649,7 @@ body.noscroll {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 9999999;
   overflow: auto;
 }
 #modal .inner {
